--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ResultsActivity" />
+        <activity
+            android:name=".ResultsActivity"
+            android:label="@string/app_title_results" />
         <activity android:name=".StartActivity" />
     </application>
 
