Major changes in the layout and addition of code comments.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,7 +19,7 @@
         <activity
             android:name=".ResultsActivity"
             android:label="@string/app_title_results" />
-        <activity android:name=".StartActivity" />
+        <activity android:name=".QuizActivity" />
     </application>
 
 </manifest>
